# zeit_fund

./: .gitignore  Cargo.toml  README.md  lib.rs
dividend_wallet/: Cargo.toml  lib.rs
ts-sdk/: createMarket.ts  localBatteryStation.sh  localIPFS.sh  package.json
zeit_fund/: Cargo.toml  lib.rs
